Bug 134363 - Quite some time spend in SalBitmap::convertDataBitCount while dragging (SKIA) High Res file
Summary: Quite some time spend in SalBitmap::convertDataBitCount while dragging (SKIA)...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-06-28 15:01 UTC by Telesto
Modified: 2020-07-01 05:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (7.07 MB, application/vnd.oasis.opendocument.presentation)
2020-06-28 15:01 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-06-28 15:01:08 UTC
Description:
Quite some time spend in SalBitmap::convertDataBitCount while dragging (SKIA)



Steps to Reproduce:
1. Open the attached file
2. Go the second sheet and drag

Actual Results:
Somewhat slow with Raster & Vulkan. 6.1 with OpenGL was surely faster

Expected Results:
Speed of 6.1


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.beta2+
Build ID: 22c451df33b733440f24c1feb6380d31240d55e6
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 1 Telesto 2020-06-28 15:01:28 UTC
Created attachment 162479 [details]
Example file
Comment 2 Commit Notification 2020-07-01 05:37:37 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d1fcc9053f98cc4afb52498b40a836884bb5ec6f

optimize Bitmap::Erase() for Skia by delaying the erase (tdf#134363)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.