optimize Bitmap::Erase() for Skia by delaying the erase (tdf#134363)

Tdf#134363 causes OutputDevice::DrawTransformBitmapExDirect()
to create a huge 1bpp bitmap as mask, and Skia code then tries
to convert all the bits to a format Skia would understand. Which
is wasteful, as SkShader with the color given will do the same
task much more efficiently.

Change-Id: If0bba16f56fed9c3720be801b25a1e703054ed8d